--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Jul 27 01:03:59 UTC 2025
+#Sun Jul 27 01:39:01 UTC 2025
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -26,10 +26,10 @@ level-name=world
 level-seed=
 level-type=minecraft\:normal
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=15
 max-tick-time=60000
 max-world-size=29999984
-motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
+motd=§r              §5§l(MSX)  §dHOLA§r\n          §f§n
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
@@ -54,5 +54,5 @@ spawn-protection=16
 sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
-view-distance=10
+view-distance=8
 white-list=false
